kong/kong-deploy-svc-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploypod
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web

  template:
    metadata:
      name: containerpod
      labels:
        app: web
    spec:
      containers:
      - name: c1
        image: nginx:alpine
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: mysvc
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysvc
            port:
              number: 80
